--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -35,30 +35,6 @@ jobs:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           reviewdog -reporter=github-pr-check -runners=golint,govet -fail-on-error
-
-      - name: Run reviewdog (github-pr-review with tee)
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Remove Go Problem Matchers [1] as it reports duplicate results with
-          # reviewdog.
-          # [1]: https://github.com/actions/toolkit/blob/master/docs/commands.md#problem-matchers
-          echo "::remove-matcher owner=go::"
-          golint ./... | reviewdog -f=golint -name=golint-pr-review -reporter=github-pr-review -tee
-
-      - name: Run reviewdog (github-pr-check with -filter-mode=file)
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          golint | reviewdog -f=golint -name=golint-pr-check-filter-mode-file -reporter=github-pr-check -filter-mode=file -level=warning
-
-      - name: gofmt -s with reviewdog
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gofmt -s -d . | \
-            reviewdog -name="gofmt" -f=diff -f.diff.strip=0 -reporter=github-pr-review
-
   golangci-lint:
     permissions:
       checks: write
@@ -95,6 +71,8 @@ jobs:
           reporter: github-pr-review
           filter_mode: nofilter
           fail_on_error: true
+          # Set staticcheck flags
+          staticcheck_flags: -checks=inherit,-SA1019,-SA1029,-SA5008
 
   misspell:
     name: runner / misspell
